@@ -1,3 +1,8 @@
+2013-08-05 Blub
+
+	* --integrity: don't show missing / conflicting  package  messages
+		multiple times
+
 2013-08-04 Blub (0.1.3)
 
 	* Released
